fix spacing utilities

--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -11,7 +11,7 @@
 	margin-left: 0;
 }
 
-.m0 {
+.mr-0 {
 	margin-right: 0 !important;
 }
 
@@ -73,10 +73,6 @@
 
 .mr-2 {
 	margin-right: 8px;
-}
-
-.mr-0 {
-  margin-right: 0;
 }
 
 .mx-0 {
